<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diagnostic_aggregator</name>
  <version>4.2.7</version>
  <description>Aggregates diagnostic information from multiple sources.</description>

  <maintainer email="Christian.Henkel2@de.bosch.com">Christian Henkel</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">https://index.ros.org/p/diagnostic_aggregator/</url>

  <author>Kevin Watts</author>
  <author email="brice.rebsamen@gmail.com">Brice Rebsamen</author>
  <author email="arne.nordmann@de.bosch.com">Arne Nordmann</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <depend>rclpy</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <diagnostic_aggregator plugin="${prefix}/plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
