<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diagnostic_remote_logging</name>
  <version>4.5.7</version>
  <description>Tools for remotely logging diagnostics data.</description>

  <maintainer email="dwijffels@lely.com">Daan Wijffels</maintainer>
  <maintainer email="Christian.Henkel2@de.bosch.com">Christian Henkel</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">https://index.ros.org/p/diagnostic_remote_logging/</url>

  <author email="dwijffels@lely.com">Daan Wijffels</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>curl</build_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
